# openhub-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  DESIGN.md  README.md  README.zh-CN.md  RELEASING.md  RELEASING.zh-CN.md  SECURITY.md  STATUS.md  docker-compose.yml  package.json
crates/agent/openhub-agent/: Cargo.toml
crates/agent/openhub-agent/src/: agents_md.rs  bootstrap.rs  cache_diagnostics.rs  companion_tools.rs  context.rs  cron_tools.rs  engine.rs  knowledge_tools.rs  lib.rs  loop_guard.rs  memory_tools.rs  orchestration.rs  requirement_tools.rs  session.rs  skill_tool.rs  spawn_tool.rs  spawner.rs  taskboard.rs  vcr.rs
crates/agent/openhub-agent/tests/: autocompact_test.rs  bootstrap_test.rs  compact_types_test.rs  cwd_injection_test.rs  emergency_test.rs  engine_compact_test.rs  engine_test.rs  json_stream_approval_test.rs  memory_context_integration.rs  microcompact_test.rs  orchestration_test.rs  output_compaction_test.rs  plan_e2e_test.rs  plan_engine_test.rs  plan_prompt_file_test.rs  plan_tools_test.rs  skills_e2e.rs  spawn_description_test.rs  spawn_test.rs  tool_guidance_prompt_test.rs
crates/agent/openhub-browser/: Cargo.toml
crates/agent/openhub-browser/src/: approval.rs  extract.rs  lib.rs  redline.rs  replay.rs  site_memory.rs  tool.rs  visual_fallback.rs
crates/agent/openhub-browser/tests/: integration_e2e.rs  site_memory.rs  site_memory_e2e.rs  visual_fallback.rs
crates/agent/openhub-cli/: Cargo.toml
crates/agent/openhub-cli/src/: main.rs
crates/agent/openhub-mcp/: Cargo.toml
crates/agent/openhub-mcp/src/: manager.rs  tool_proxy.rs
crates/agent/openhub-providers/: Cargo.toml
crates/agent/openhub-providers/src/: anthropic.rs  anthropic_shared.rs  bedrock.rs  lib.rs  openai.rs  vertex.rs
crates/agent/openhub-providers/tests/: provider_anthropic_test.rs  provider_openai_test.rs
crates/agent/openhub-skills/: Cargo.toml
crates/agent/openhub-skills/src/: conditional.rs  context_modifier.rs  discovery.rs  discovery_supplemental_tests.rs  executor.rs  frontmatter.rs  hooks.rs  integration_tests.rs  loader.rs  loader_supplemental_tests.rs  loader_tests.rs  mcp.rs  paths.rs  shell.rs  substitution.rs  types.rs  watcher.rs  watcher_tests.rs
crates/backend/openhub-ai-agent/: Cargo.toml
crates/backend/openhub-ai-agent/src/: agent_runtime.rs  agent_task.rs  browser_fetcher.rs  idle_scanner.rs  knowledge_completer.rs  knowledge_retrieval.rs  knowledge_writeback.rs  lib.rs  registry.rs  task_manager.rs  terminal_title_completer.rs  types.rs
crates/backend/openhub-ai-agent/tests/: acp_agent_integration.rs  acp_module_surface.rs  agent_types_integration.rs  cc_switch_integration.rs  factory_provider_integration.rs  knowledge_search_e2e.rs  knowledge_writeback_e2e.rs  prompt_pipeline_integration.rs  skill_manager_integration.rs
crates/backend/openhub-app/: Cargo.toml
crates/backend/openhub-app/src/: channel_asset_resolver.rs  cli.rs  config.rs  desktop.rs  lib.rs  main.rs  mcp_endpoints.rs  provider_deletion.rs  services.rs  workshop_bridge.rs
crates/backend/openhub-app/tests/: acp_e2e.rs  agent_integration_e2e.rs  assistants_e2e.rs  auth_e2e.rs  autowork_idmm_cooperation_e2e.rs  auxiliary_e2e.rs  builtin_asset_contract.rs  channel_e2e.rs  conversation_e2e.rs  cron_e2e.rs  custom_agent_e2e.rs  extension_e2e.rs  file_e2e.rs  gateway_e2e.rs  health.rs  idmm_e2e.rs  idmm_intervention_e2e.rs  local_mode.rs  mcp_e2e.rs  message_e2e.rs  office_e2e.rs  orchestrator_run_e2e.rs  register_knowledge_e2e.rs  remote_mcp_smoke.rs  requirements_e2e.rs  shell_e2e.rs  skills_builtin_e2e.rs  startup_smoke.rs  system_version_e2e.rs  websocket_e2e.rs  webui_lan_smoke.rs  work_dir_e2e.rs
crates/backend/openhub-assistant/: Cargo.toml
crates/backend/openhub-assistant/src/: builtin.rs  routes.rs  service.rs
crates/backend/openhub-companion/: Cargo.toml
crates/backend/openhub-companion/src/: archive_port.rs  archiver.rs  collector.rs  companion.rs  config.rs  events.rs  export.rs  figure.rs  figures.rs  gamify.rs  learner.rs  lib.rs  matting_model.rs  migrate.rs  profile.rs  registry.rs  routes.rs  service.rs  skill_sink.rs  store.rs
crates/backend/openhub-conversation/: Cargo.toml
crates/backend/openhub-conversation/src/: acp_error_recovery.rs  convert.rs  failover_seam.rs  message_persistence.rs  model_failover.rs  routes.rs  routes_aux.rs  runtime_state.rs  service.rs  service_ops.rs  service_test.rs  skill_resolver.rs  skill_snapshot.rs  state.rs  stream_relay.rs  task_options.rs
crates/backend/openhub-conversation/tests/: conversation_crud.rs  conversation_extended.rs  response_middleware_integration.rs  stream_relay_tool_call.rs
crates/backend/openhub-creation/: Cargo.toml
crates/backend/openhub-creation/src/: dto.rs  lib.rs  provider.rs  routes.rs  service.rs
crates/backend/openhub-cron/: Cargo.toml
crates/backend/openhub-cron/src/: artifacts.rs  busy_guard.rs  error.rs  events.rs  executor.rs  routes.rs  scheduler.rs  service.rs  sink.rs  skill_suggest.rs  state.rs  types.rs
crates/backend/openhub-cron/tests/: prompt_test.rs  service_integration.rs  skill_file_test.rs
crates/backend/openhub-gateway/: Cargo.toml
crates/backend/openhub-gateway/src/: browser_registry.rs  caps_agent.rs  caps_autowork.rs  caps_browser.rs  caps_channel.rs  caps_companion.rs  caps_computer.rs  caps_confirmation.rs  caps_conversation.rs  caps_cron.rs  caps_files.rs  caps_idmm.rs  caps_knowledge.rs  caps_knowledge_ext.rs  caps_mcp.rs  caps_memory.rs  caps_orchestrator.rs  caps_provider.rs  (+12 more)
crates/backend/openhub-idmm/: Cargo.toml
crates/backend/openhub-knowledge/: Cargo.toml
crates/backend/openhub-office/: Cargo.toml
crates/backend/openhub-orchestrator/: Cargo.toml
crates/backend/openhub-public/: Cargo.toml
crates/backend/openhub-public-agent/: Cargo.toml
crates/backend/openhub-secret/: Cargo.toml
crates/backend/openhub-shell/: Cargo.toml
crates/backend/openhub-system/: Cargo.toml
crates/backend/openhub-terminal/: Cargo.toml
crates/backend/openhub-webhook/: Cargo.toml
(+1974 files in other folders)
