[package]
name = "openhub-browser"
description = "BrowserTool facade for Nomi browser-use (wraps the in-process CDP engine)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openhub-browser-engine.workspace = true
openhub-types.workspace    = true
openhub-config.workspace   = true
openhub-protocol.workspace = true
openhub-tools.workspace    = true
# F1: secret:NAME 拦截 → origin-bound vault 解析 → TypeInput::Secret 注入（值不过 LLM）。
openhub-secret.workspace = true

base64.workspace      = true
serde.workspace       = true
tracing.workspace     = true
tokio.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
image.workspace       = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# P3-X2: per-pet secret vault round-trip tests use a temp dir.
tempfile.workspace = true
