[package]
name = "openhub-mcp"
description = "MCP (Model Context Protocol) client implementation for Nomi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openhub-types.workspace    = true
openhub-protocol.workspace = true
openhub-tools.workspace    = true
openhub-config.workspace   = true

tracing.workspace     = true
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
async-trait.workspace = true
thiserror.workspace   = true
reqwest.workspace     = true
futures.workspace     = true


[features]
test-utils = []
