[package]
name = "openhub-providers"
description = "LLM provider implementations for OpenHub (Anthropic, OpenAI, Bedrock, Vertex)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openhub-types.workspace  = true
openhub-config.workspace = true
openhub-net.workspace = true

tokio.workspace        = true
futures.workspace      = true
reqwest.workspace      = true
serde.workspace        = true
serde_json.workspace   = true
async-trait.workspace  = true
thiserror.workspace    = true
dirs.workspace         = true
base64.workspace       = true
uuid.workspace         = true
jsonwebtoken.workspace = true

aws-sigv4.workspace            = true
aws-credential-types.workspace = true
aws-config.workspace           = true

tracing.workspace        = true


[dev-dependencies]
wiremock.workspace   = true
tokio-test.workspace = true
http.workspace       = true
