[package]
name = "openhub-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nomicore"
path = "src/main.rs"

[features]
default = ["telegram", "lark", "dingtalk", "weixin", "wecom", "discord", "matrix", "mattermost", "slack", "twitch", "nostr", "qqbot"]
telegram = ["openhub-channel/telegram"]
lark = ["openhub-channel/lark"]
dingtalk = ["openhub-channel/dingtalk"]
weixin = ["openhub-channel/weixin"]
wecom = ["openhub-channel/wecom"]
discord = ["openhub-channel/discord"]
matrix = ["openhub-channel/matrix"]
mattermost = ["openhub-channel/mattermost"]
slack = ["openhub-channel/slack"]
twitch = ["openhub-channel/twitch"]
nostr = ["openhub-channel/nostr"]
qqbot = ["openhub-channel/qqbot"]
# Desktop control tools (desktop host enables this; web/server hosts do not).
# Also pulls the discrete-tool MCP bridge (`mcp-computer-stdio`) deps so codex/
# ACP sessions get the same computer-use; web/headless builds omit them entirely.
computer-use = [
    "openhub-ai-agent/computer-use",
    "openhub-gateway/computer-use",
    "dep:openhub-computer",
    "dep:openhub-config",
    "dep:openhub-tools",
    "dep:openhub-types",
]
# Browser-automation tools (desktop host enables this; web/server hosts do not).
# Also pulls the discrete-tool MCP bridge (`mcp-browser-stdio`) deps so codex/
# ACP sessions get the same browser-use; web/headless builds omit them entirely
# (no self-hosted-CDP / Chromium stack). Mirrors how `computer-use` pulls
# openhub-computer/-config/-tools/-types for mcp-computer-stdio.
# P3-GW1: also forwards to `openhub-gateway/browser-use` so the desktop gateway
# exposes the per-companion `openhub_browser_*` tools (route A). Web/headless builds
# omit the feature → the gateway registers no browser tools.
browser-use = [
    "openhub-ai-agent/browser-use",
    "openhub-gateway/browser-use",
    "dep:openhub-browser",
    "dep:openhub-browser-engine",
    "dep:openhub-config",
    "dep:openhub-tools",
    "dep:openhub-types",
]

[dependencies]
openhub-common.workspace = true
openhub-assets.workspace = true
openhub-db.workspace = true
openhub-api-types.workspace = true
openhub-realtime.workspace = true
openhub-auth.workspace = true
openhub-system.workspace = true
openhub-file.workspace = true
openhub-office.workspace = true
openhub-shell.workspace = true
openhub-ai-agent.workspace = true
openhub-mcp.workspace = true
openhub-conversation.workspace = true
openhub-extension.workspace = true
openhub-channel.workspace = true
openhub-cron.workspace = true
openhub-requirement.workspace = true
openhub-idmm.workspace = true
openhub-knowledge.workspace = true
openhub-orchestrator.workspace = true
openhub-companion.workspace = true
openhub-public-agent.workspace = true
openhub-workshop.workspace = true
openhub-creation.workspace = true
openhub-gateway.workspace = true
openhub-public.workspace = true
openhub-webhook.workspace = true
# P3-X2: per-pet browser-use credential secret CRUD endpoints (web feature mounts routes).
openhub-secret = { workspace = true, features = ["web"] }
openhub-terminal.workspace = true
openhub-assistant.workspace = true
openhub-runtime.workspace = true
openhub-net.workspace = true
axum.workspace = true
dirs.workspace = true
# OS-level advisory lock for the exclusive per-data-dir server lock
# (bootstrap/server_lock.rs) — same dep openhub-db's migrate lock uses.
fs2.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
reqwest.workspace = true
rmcp = { version = "1.5", features = ["server", "transport-io", "schemars"] }
anyhow.workspace = true
async-trait.workspace = true
# Network-interface enumeration for desktop LAN-IP detection (WebUI remote access).
if-addrs = "0.13"

# Computer-use discrete-tool MCP bridge (`mcp-computer-stdio`) — facade over
# ComputerTool. Optional; only the `computer-use` feature pulls the native
# screen/input/UI-Automation stack, so web/headless builds stay lean.
openhub-computer = { workspace = true, optional = true }
# Browser-use discrete-tool MCP bridge (`mcp-browser-stdio`) — facade over
# BrowserTool. Optional; only the `browser-use` feature pulls the self-hosted-CDP
# browser engine + Chromium, so web/headless builds stay lean. Shares the
# optional openhub-config/-tools/-types deps with computer-use.
openhub-browser = { workspace = true, optional = true }
# Phase 2b: the "log into my browser" settings action drives a headful engine
# directly (create_engine + capture_storage_state + storage_state vault), so the
# login persists into the shared profile/vault. Only the browser-use feature pulls it.
openhub-browser-engine = { workspace = true, optional = true }
openhub-config = { workspace = true, optional = true }
openhub-tools = { workspace = true, optional = true }
openhub-types = { workspace = true, optional = true }

[dev-dependencies]
openhub-api-types.workspace = true
openhub-realtime.workspace = true
clap.workspace = true
reqwest.workspace = true
sqlx.workspace = true
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
openhub-ai-agent = { workspace = true, features = ["test-support"] }
async-trait.workspace = true
base64.workspace = true
git2.workspace = true
http-body-util.workspace = true
rust_xlsxwriter.workspace = true
tempfile = "3"
tower = { workspace = true, features = ["util"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
wiremock = "0.6"
