[package]
name = "openhub-assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openhub-common = { workspace = true }
openhub-api-types = { workspace = true }
openhub-db = { workspace = true }
openhub-extension = { workspace = true }
axum = { workspace = true }
include_dir = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
openhub-realtime = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = { workspace = true }
