[package]
name = "openhub-conversation"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-db.workspace = true
openhub-api-types.workspace = true
openhub-realtime.workspace = true
openhub-auth.workspace = true
openhub-ai-agent.workspace = true
openhub-extension.workspace = true
openhub-file.workspace = true
openhub-knowledge.workspace = true
openhub-mcp.workspace = true
openhub-runtime.workspace = true
axum.workspace = true
regex.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
# Enable the `AgentInstance::Mock` variant so tests can build fake agents
# through the trait-object escape hatch without spawning real CLI processes.
openhub-ai-agent = { workspace = true, features = ["test-support"] }
