[package]
name = "openhub-creation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-api-types.workspace = true
openhub-auth.workspace = true
openhub-db.workspace = true
openhub-net.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tracing.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
