[package]
name = "openhub-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# P3-GW1 路线 A：网关浏览器工具（per-companion BrowserTool registry）。门控因为它拉入
# `openhub-browser`（→ chromiumoxide CDP 栈 + 受管 Chromium）——无浏览器的 headless 宿主不应被迫依赖。
# 由 `openhub-app` 的同名 feature 经 `openhub-gateway/browser-use` 向下传导；关时网关不暴露
# openhub_browser_* 工具（dispatch 走 unknown tool，schema 不注册）。依赖方向：gateway → openhub-browser
# （openhub-browser 不反依赖 gateway，已核对无环）。
browser-use = ["dep:openhub-browser", "dep:openhub-types", "dep:openhub-config", "dep:openhub-tools", "dep:openhub-secret", "dep:futures"]
# Gateway computer-use tools (single shared desktop ComputerTool). Forwarded by
# `openhub-app`'s `computer-use` feature via `openhub-gateway/computer-use`; off
# on headless/web hosts (which never pull the native screen/input/UIA stack).
# Reuses the optional openhub-types/-config/-tools deps shared with browser-use.
computer-use = ["dep:openhub-computer", "dep:openhub-types", "dep:openhub-config", "dep:openhub-tools"]

[dependencies]
openhub-common.workspace = true
openhub-api-types.workspace = true
openhub-conversation.workspace = true
openhub-cron.workspace = true
openhub-requirement.workspace = true
openhub-companion.workspace = true
openhub-ai-agent.workspace = true
openhub-db.workspace = true
openhub-terminal.workspace = true
openhub-idmm.workspace = true
openhub-knowledge.workspace = true
# 创意工坊 (Creative Workshop): canvas/asset service (read canvas state + apply
# agent ops) and the 生成引擎 (creation) task queue (trigger/inspect generation).
# Both back the caps_workshop 画布助手 tools. Dependency direction gateway →
# workshop / creation only (neither deps gateway — no cycle).
openhub-workshop.workspace = true
openhub-creation.workspace = true
# 助手 (assistants) service: caps_orchestrator folds each ENABLED assistant's
# persona/skills/model into the run's fleet snapshot (P4 Task 2). Dependency
# direction gateway → openhub-assistant only (no cycle — assistant does not dep gateway).
openhub-assistant.workspace = true
# 智能编排 (orchestration) Run control-plane: RunService (create/plan/inspect/cancel)
# + RunEngine (serial execution loop) backing the caps_orchestrator gateway tools.
openhub-orchestrator.workspace = true
# System domain capabilities (settings / client preferences / providers / model fetch).
openhub-system.workspace = true
# Channel domain capabilities (IM bot plugins / pairing / users / companion binding).
openhub-channel.workspace = true
# Filesystem + shell-open domain capabilities.
openhub-file.workspace = true
openhub-shell.workspace = true
# MCP-server + extensions/hub/skills domain capabilities.
openhub-mcp.workspace = true
openhub-extension.workspace = true
# P3-GW1: per-companion BrowserTool registry（路线 A）。optional + feature 门控，关时不拉浏览器栈。
openhub-browser = { workspace = true, optional = true }
# Computer-use: shared desktop ComputerTool. optional + feature 门控，关时不拉 screen/input/UIA 栈。
openhub-computer = { workspace = true, optional = true }
# P3-X2: per-pet secret vault path resolver for gateway-driven secret:NAME (browser-use only).
openhub-secret = { workspace = true, optional = true }
openhub-types = { workspace = true, optional = true }
openhub-config = { workspace = true, optional = true }
# `Tool` trait（execute/category）——facade BrowserTool 实现它，registry 经它驱动动作。
openhub-tools = { workspace = true, optional = true }
# CC: BrowserRegistry::execute_parallel 用 futures::future::join_all 并行多 key（异 key 真并发/同 key 串行）。
futures = { workspace = true, optional = true }
axum.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# Capability registry: single-source JSON Schema generation from each capability's
# typed Request struct (same schemars major as rmcp 1.7 re-exports → identical shape
# for the MCP clients consuming tools/list). The bridge passes these schema maps
# straight through to `rmcp::model::Tool`, so only the gateway needs schemars.
schemars = "1"
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
reqwest.workspace = true
