[package]
name = "openhub-knowledge"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-db.workspace = true
openhub-api-types.workspace = true
openhub-realtime.workspace = true
openhub-auth.workspace = true
openhub-net.workspace = true
openhub-redact.workspace = true
hex.workspace = true
sha2.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tracing.workspace = true
walkdir.workspace = true
similar.workspace = true
zip.workspace = true
reqwest.workspace = true
url.workspace = true
chrono.workspace = true
futures-util.workspace = true
htmd.workspace = true
base64.workspace = true

[target.'cfg(windows)'.dependencies]
# NTFS junctions mount knowledge bases into workspaces without requiring
# the SeCreateSymbolicLink privilege (same rationale as openhub-extension).
junction = "1"

[dev-dependencies]
tempfile.workspace = true
wiremock.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util.workspace = true
