[package]
name = "openhub-office"
version.workspace = true
edition.workspace = true

[dependencies]
openhub-common.workspace = true
openhub-api-types.workspace = true
openhub-realtime.workspace = true
openhub-auth.workspace = true
openhub-file.workspace = true
openhub-runtime.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
which.workspace = true
calamine.workspace = true
sha1.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true
rust_xlsxwriter.workspace = true
tokio = { workspace = true, features = ["test-util"] }
